--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <p class="page-subtitle">
     Descubra os valores das medidas
   </p>
+  <a href="https://imersao.dev/" target="_blank">
   <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt=""><br><br>
+  </a>
   <label for="moeda">Insira o valor em ATM</label><br>
   <input type="number" id="valor" size="2" /><br>
   <button type="submit" onclick="ConverterEmPsi()">Converter em psi</button>
