--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
   <link href="http://fonts.cdnfonts.com/css/rpm" rel="stylesheet">
     </div>
-  <a href="https://j0aod3v.github.io/" target="_blank">
+  <a href="https://j0aod3v.github.io/">
     <img src="https://github.com/J0aoD3v/J0aoD3v.github.io/raw/main/logojoaodev.png" alt="" class="joaodev-logo">
 <!-- partial -->
   <script  src="./script.js"></script>
