--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - (Aula 2) Conversor de Pressão com 3 botoes</title>
+  <title>Conversor de Pressão</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
