--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Conversor de Pressão</title>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/J0aoD3v/Conversor-de-pressao/main/favicon.ico">
 </head>
 <body>
 <!-- partial:index.partial.html -->
